using DemoEF_DALApplicationDBContext;
using DemoEF_Entite;
using DemoEF_CasUtilisation;

public interface IManipulationPersonneFactory
{
    ManipulationPersonnes Creer();
}